--- a/driver-artemis-jms/pom.xml
+++ b/driver-artemis-jms/pom.xml
@@ -48,6 +48,16 @@
 			<groupId>org.apache.qpid</groupId>
 			<artifactId>qpid-jms-client</artifactId>
 			<version>0.54.0</version>
+			<exclusions>
+			  <exclusion>
+			    <groupId>io.netty</groupId>
+			    <artifactId>netty-transport-native-epoll</artifactId>
+			  </exclusion>
+			  <exclusion>
+			    <groupId>io.netty</groupId>
+			    <artifactId>netty-transport-native-kqueue</artifactId>
+			  </exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.activemq</groupId>
