predefined queue capability

--- a/driver-artemis-jms/artemis.yaml
+++ b/driver-artemis-jms/artemis.yaml
@@ -22,4 +22,4 @@ driverClass: io.openmessaging.benchmark.driver.artemis.ArtemisBenchmarkDriver
 
 # ActiveMQ Artemis client-specific configuration
 #brokerAddress: tcp://193.122.156.2:61616
-brokerAddress: tcp://localhost:61616
+brokerAddress: amqp://localhost:61616
